Updates from Overleaf

--- a/sample-authordraft.tex
+++ b/sample-authordraft.tex
@@ -102,7 +102,7 @@
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. You can use the guide ``How to Write an Abstract''~\cite{howToabstract1997} by \citeauthor{howToabstract1997}.
 \end{abstract}
 
 %%
@@ -141,7 +141,7 @@
 \starttocentries% Resume adding content to the ToC
 
 \section{Introduction}
-This \LaTeX\ template should be used for all seminars at Human-centered Computing\footnote{\url{https://www.mi.fu-berlin.de/en/inf/groups/hcc/index.html}}. This template is a slightly modified version of the \emph{ACM Conference Proceedings "Master" Template}.\footnote{Downloaded at \url{https://www.overleaf.com/latex/templates/acm-conference-proceedings-master-template/pnrfvrrdbfwt} on December 21st, 2020} The ``\verb|acmart|'' document class is used. The template style is ``\verb|sigchi|'' with no additional parameters. Please use the template as it is. There is no need of changing the typeface, spacing or any other layout elements. Especially please do not use ``\verb|\vspace{}|'' or ``\verb|\hspace{}|'' commands.
+This \LaTeX\ template should be used for all seminars at Human-centered Computing\footnote{\url{https://www.mi.fu-berlin.de/en/inf/groups/hcc/index.html}} working group. This template is a slightly modified version of the \emph{ACM Conference Proceedings "Master" Template}.\footnote{Downloaded at \url{https://www.overleaf.com/latex/templates/acm-conference-proceedings-master-template/pnrfvrrdbfwt} on December 21st, 2020} The ``\verb|acmart|'' document class is used. The template style is ``\verb|sigchi|'' with no additional parameters. Please use the template as it is. There is no need of changing the typeface, spacing or any other layout elements. Especially please do not use ``\verb|\vspace{}|'' or ``\verb|\hspace{}|'' commands.
 
 
 \section{Title Information}
@@ -152,7 +152,7 @@ capitalization. There is a long version of your title {\verb|\newcommand{\myLong
 \section{Authors and Affiliations}
 Please add your author information. This includes your
 \emph{firstname}, \emph{lastname}, and \emph{e-mail}. Also add your name to the 
-\verb|shortauthors| command and abbreviating your first name. This will display your name together with your short title on the top right page header and the shorter version will prevent overlapping text.
+\verb|shortauthors| command and abbreviate your first name. This will display your name together with your short title on the top right page header and the shorter version will prevent overlapping text.
 
 \section{Rights Information}
 All ACM copyright information is removed from this template. Please refer the the comments on how this was done.
@@ -196,11 +196,12 @@ in the example below.
   \caption{1907 Franklin Model D roadster. Photograph by Harris \&
     Ewing, Inc. [Public domain], via Wikimedia
     Commons. (\url{https://goo.gl/VLCRBB}).}
+  \label{fig:car}
   \Description{A woman and a girl in white dresses sit in an open car.}
 \end{figure}
 
 Your figures should contain a caption which describes the figure to
-the reader.
+the reader. See an example for a figure caption in~\ref{fig:car}.
 
 Figure captions are placed {\itshape below} the figure.
 
