--- a/sample-base.bib
+++ b/sample-base.bib
@@ -596,6 +596,15 @@ year = {2003},
 }
 
 
+@misc{howToabstract1997,
+  author =       "Philip Koopman",
+  year =         "1997",
+  month =        October,
+  title =        "How to Write an Abstract",
+  lastaccessed = "January 7, 2021",
+  url =          "https://users.ece.cmu.edu/~koopman/essays/abstract.html",
+}
+
 @misc{Poker06,
   author =       "Poker-Edge.Com",
   year =         "2006",
