--- a/sample-authordraft.tex
+++ b/sample-authordraft.tex
@@ -352,10 +352,11 @@ command in the {\bfseries preamble} (before the command
 %%
 %% The next two lines define the bibliography style to be used, and
 %% the bibliography file.
-\bibliographystyle{ACM-Reference-Format}
+\bibliographystyle{chicago}
 \bibliography{sample-base}
 
 \end{document}
 \endinput
 %%
 %% End of file `sample-authordraft.tex'.
+
