--- a/sample-base.bib
+++ b/sample-base.bib
@@ -637,6 +637,132 @@ year = {2003},
   lastaccessed = "",
 }
 
+@misc{firstprinc,
+  author = "Bruce Tognazzini",
+  year = 2003,
+  url = "http://www.asktog.com/basics/firstPrinciples.html",
+  lastaccessed = "April 8, 2021"
+}
+
+@misc{howtoeval2020,
+  author =       "Euphemia Wong",
+  year =         "2020",
+  month =        July,
+  title =        "How to Conduct a Heuristic Evaluation ",
+  lastaccessed = "April 7, 2021",
+  url =          "https://www.interaction-design.org/literature/article/heuristic-evaluation-how-to-conduct-a-heuristic-evaluation",
+}
+
+@article{impdialog1990,
+  author = "Nielsen, J., and Molich, R.",
+  year = "1990",
+  month = "March",
+  title = "Improving a Human-Computer Dialogue",
+  lastaccessed = "April 8, 2021",
+  url = "https://www.cs.uml.edu/~holly/91.550/papers/p338-molich.pdf"
+}
+
+@article{heureval1990,
+  author = "Nielsen, J., and Molich, R.",
+  year = "1990",
+  month = "April",
+  title = "Heuristic evaluation of user interfaces",
+  booktitle = {CHI '90: Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages = {249--256},
+  lastaccessed = "April 8, 2021",
+  doi = "10.1145/97243.97281",
+}
+
+@article{enhanceheuristics1994,
+  author = "Jakob Nielsen",
+  year = "1994",
+  title = "Enhancing the explanatory power of usability heuristics",
+  lastaccessed = "April 8, 2021",
+  url = "https://static.aminer.org/pdf/PDF/000/089/679/enhancing_the_explanatory_power_of_usability_heuristics.pdf"
+}
+
+@article{conducthe1994,
+  author = "Jakob Nielsen",
+  year = "1994",
+  month = "November",
+  title = "How to conduct a heuristic evaluation",
+  lastaccessed = "April 8, 2021",
+  url = "https://www.nngroup.com/articles/how-to-conduct-a-heuristic-evaluation/"
+}
+
+@article{he1994,
+  author = "Jakob Nielsen",
+  year = 1994,
+  title = "Heuristic evaluation"
+  booktitle = "In Nielsen, J., and Mack, R.L. (Eds.), Usability Inspection Methods, John Wiley & Sons, New York, NY."
+}
+
+@article{groupwareheur2001,
+  authors = "Kevin Baker and Saul Greenberg, and Carl Gutwin",
+  year = 2001,
+  title = "Heuristic Evaluation of Groupware  Based on the Mechanics of Collaboration",
+  doi = "10.1007/3-540-45348-2_14"
+}
+
+@article{humankernel2015,
+  author = "Andrew Gordon Wilson and Christoph Dann and Christopher G. Lucas and and Eric P. Xing",
+  title = "The human kernel",
+  year = "2015",
+  booktitle = "Cortes C, Lawrence ND, Lee DD, Sugiyama M, Garnett R (eds) Advances in neural information processing systems, NIPS 2015, vol 28. NIPS Foundation",
+  pages = {2836--2844}
+  url = "https://papers.nips.cc/paper/2015/file/4462bf0ddbe0d0da40e1e828ebebeb11-Paper.pdf"
+}
+
+@article{reviewiml2018,
+  author = "J. J. Dudley and P. Ola Kristensson",
+  year = 2018,
+  title = "A review of user interface design for Interactive Machine Learning",
+  booktitle = "ACM Transactions Interactive Intelligent Systems, 8",
+  doi = "10.1145/3185517",
+}
+
+@article{imlexp2018,
+  author = "Andreas Holzinger and Markus Plass and Michael Kickmeier-Rust and Katharina Holzinger and Gloria Cerasela Crişan and Camelia-M. Pintea and Vasile Palade",
+  year = 2018,
+  month = "November",
+  title = "Interactive machine learning: experimental evidence for the human in the algorithmic loop",
+  booktitle = "Applied Intelligence volume 49",
+  pages = {2401--2414},
+  doi = "10.1007/s10489-018-1361-5"
+}
+
+@article{whatiml2018,
+  author = "Amey Varangaonkar",
+  year = 2018,
+  month = "July",
+  title = "What is interactive machine learning?",
+  url = "https://hub.packtpub.com/what-is-interactive-machine-learning/",
+  lastaccessed = "April 8, 2021"
+}
+
+@article{iml2003,
+  author = "Jerry Alan Fails and Dan Reed Olsen",
+  year = 2003,
+  title = "Interactive machine learning",
+  doi = "10.1145/604045.604056",
+  url = "http://byu.danrolsenjr.org/paperPDFs/InteractiveMachineLearning.pdf"
+}
+
+@article{imlheur2018,
+  author = "Eric Corbett and Nathaniel Saul and Meg Pirrung",
+  year = 2018,
+  title = "Interactive Machine Learning Heuristics",
+  url = "https://par.nsf.gov/servlets/purl/10104558",
+  lastaccessed = "April 8, 2021",
+}
+
+@article{evalmethods2018,
+  year = 2018,
+  booktitle = "UKEssays. (November 2018)",
+  title = "Analytical And Empirical Methods For Usability Evaluation Computer Science Essay",
+  url = "https://www.ukessays.com/essays/computer-science/analytical-and-empirical-methods-for-usability-evaluation-computer-science-essay.php?vref=1",
+  lastaccessed = "April 8, 2021"
+}
 
 @Inproceedings{Novak03,
   author =       "Dave Novak",
